cluster/apps/05-gitea/custom.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-deployment
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      volumes:
        - name: gitea-volume
          persistentVolumeClaim:
            claimName: gitea-shared-storage
      containers:
        - name: gitea-container
          image: gitea/gitea:latest-rootless
          ports:
            - containerPort: 3000
              name: gitea-web
            - containerPort: 22
              name: gitea-ssh
          volumeMounts:
            - mountPath: /data
              name: gitea-volume
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-http
spec:
  type: NodePort
  selector:
    app: gitea
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: gitea-web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
  name: gitea
  namespace: development
spec:
  rules:
    - host: git.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-http
                port:
                  number: 80
